test/deployer/testdata/envoy-both-gwc-and-gw-have-overlays-out.yaml
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/instance: gw
    app.kubernetes.io/managed-by: kgateway
    app.kubernetes.io/name: gw
    app.kubernetes.io/version: 1.0.0-ci1
    gateway.networking.k8s.io/gateway-class-name: kgateway
    gateway.networking.k8s.io/gateway-name: gw
    kgateway: kube-gateway
  name: gw
---
apiVersion: v1
data:
  envoy.yaml: |
    admin:
      address:
        socket_address: { address: 127.0.0.1, port_value: 19000 }
    layered_runtime:
      layers:
      - name: static_layer
        static_layer:
          envoy.restart_features.use_eds_cache_for_ads: true
      - name: admin_layer
        admin_layer: {}
    node:
      cluster: gw.default
      metadata:
        role: kgateway-kube-gateway-api~default~gw
    static_resources:
      listeners:
      - name: readiness_listener
        address:
          socket_address: { address: 0.0.0.0, port_value: 8082 }
        filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                normalize_path: true
                merge_slashes: true
                codec_type: AUTO
                route_config:
                  name: main_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            path: "/ready"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                          route:
                            cluster: admin_port_cluster
                http_filters:
                  - name: envoy.filters.http.health_check
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      pass_through_mode: false
                      headers:
                      - name: ":path"
                        string_match:
                          exact: "/envoy-hc"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      - name: prometheus_listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 9091
        filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                normalize_path: true
                merge_slashes: true
                stat_prefix: prometheus
                route_config:
                  name: prometheus_route
                  virtual_hosts:
                    - name: prometheus_host
                      domains:
                        - "*"
                      routes:
                        - match:
                            path: "/ready"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                          route:
                            cluster: admin_port_cluster
                        - match:
                            prefix: "/metrics"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                          route:
                            prefix_rewrite: /stats/prometheus?usedonly
                            cluster: admin_port_cluster
                        - match:
                            prefix: "/stats"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                          route:
                            prefix_rewrite: /stats
                            cluster: admin_port_cluster
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: xds_cluster
          alt_stat_name: xds_cluster
          connect_timeout: 5.000s
          load_assignment:
            cluster_name: xds_cluster
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: xds.cluster.local
                      port_value: 9977
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
              http_filters:
              - name: envoy.filters.http.credential_injector
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.credential_injector.v3.CredentialInjector
                  credential:
                    name: envoy.http.injected_credentials.generic
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.http.injected_credentials.generic.v3.Generic
                      credential:
                        name: xds-jwt-token
                        sds_config:
                          path_config_source:
                            path: "/etc/envoy/xds_service_account_token.json"
                          resource_api_version: V3
                  overwrite: true
              - name: envoy.filters.http.header_mutation
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.header_mutation.v3.HeaderMutation
                  mutations:
                    request_mutations:
                      - append:
                          append_action: OVERWRITE_IF_EXISTS
                          header:
                            key: "Authorization"
                            value: "Bearer %REQ(Authorization)%"
              - name: envoy.filters.http.upstream_codec
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
          upstream_connection_options:
            tcp_keepalive:
              keepalive_time: 10
          cluster_type:
            name: envoy.cluster.strict_dns
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.clusters.dns.v3.DnsCluster
              respect_dns_ttl: true
        - name: admin_port_cluster
          connect_timeout: 5.000s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: admin_port_cluster
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 19000
    typed_dns_resolver_config:
      name: envoy.network.dns_resolver.cares
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
        udp_max_queries: 100
    dynamic_resources:
      ads_config:
        transport_api_version: V3
        api_type: GRPC
        rate_limit_settings: {}
        grpc_services:
        - envoy_grpc:
            cluster_name: xds_cluster
      cds_config:
        resource_api_version: V3
        ads: {}
      lds_config:
        resource_api_version: V3
        ads: {}
  xds_service_account_token.json: |
    {"resources":[{
      "@type":"type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.Secret",
      "name":"xds-jwt-token",
      "generic_secret": {"secret":{"filename":"/var/run/secrets/tokens/xds-token"}}
    }]}
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/instance: gw
    app.kubernetes.io/managed-by: kgateway
    app.kubernetes.io/name: gw
    app.kubernetes.io/version: 1.0.0-ci1
    gateway.networking.k8s.io/gateway-class-name: kgateway
    gateway.networking.k8s.io/gateway-name: gw
    kgateway: kube-gateway
  name: gw
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: gw
    app.kubernetes.io/managed-by: kgateway
    app.kubernetes.io/name: gw
    app.kubernetes.io/version: 1.0.0-ci1
    gateway.networking.k8s.io/gateway-class-name: kgateway
    gateway.networking.k8s.io/gateway-name: gw
    kgateway: kube-gateway
  name: gw
spec:
  ports:
  - name: listener-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: gw
    app.kubernetes.io/name: gw
    gateway.networking.k8s.io/gateway-name: gw
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    gw-annotation: from-gateway
    gwc-annotation: from-gatewayclass
    shared-annotation: from-gateway
  labels:
    app.kubernetes.io/instance: gw
    app.kubernetes.io/managed-by: kgateway
    app.kubernetes.io/name: gw
    app.kubernetes.io/version: 1.0.0-ci1
    gateway.networking.k8s.io/gateway-class-name: kgateway
    gateway.networking.k8s.io/gateway-name: gw
    gw-label: from-gateway
    gwc-label: from-gatewayclass
    kgateway: kube-gateway
    shared-label: from-gateway
  name: gw
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: gw
      app.kubernetes.io/name: gw
      gateway.networking.k8s.io/gateway-name: gw
  strategy: {}
  template:
    metadata:
      annotations:
        gateway.kgateway.dev/gateway-full-name: gw
        prometheus.io/path: /metrics
        prometheus.io/port: "9091"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: gw
        app.kubernetes.io/name: gw
        gateway.networking.k8s.io/gateway-class-name: kgateway
        gateway.networking.k8s.io/gateway-name: gw
        kgateway: kube-gateway
    spec:
      containers:
      - args:
        - --disable-hot-restart
        - --service-node
        - $(POD_NAME).$(POD_NAMESPACE)
        - --log-level
        - info
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_UID
          valueFrom:
            fieldRef:
              fieldPath: metadata.uid
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: ENVOY_UID
          value: "0"
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.namespace=$(POD_NAMESPACE),service.instance.id=$(POD_UID),service.version=1.0.0-ci1,k8s.namespace.name=$(POD_NAMESPACE),k8s.pod.name=$(POD_NAME),k8s.pod.uid=$(POD_UID),k8s.node.name=$(NODE_NAME),k8s.deployment.name=gw,k8s.container.name=kgateway-proxy
        image: ghcr.io/envoy-wrapper:v2.1.0-dev
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - wget --post-data "" -O /dev/null 127.0.0.1:19000/healthcheck/fail;
                sleep 10
        name: kgateway-proxy
        ports:
        - containerPort: 8080
          name: listener-8080
          protocol: TCP
        - containerPort: 9091
          name: http-monitoring
        readinessProbe:
          httpGet:
            path: /ready
            port: 8082
          periodSeconds: 10
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10101
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /ready
            port: 8082
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 2
        volumeMounts:
        - mountPath: /etc/envoy
          name: envoy-config
        - mountPath: /var/run/secrets/tokens
          name: xds-token
          readOnly: true
      serviceAccountName: gw
      terminationGracePeriodSeconds: 60
      volumes:
      - name: xds-token
        projected:
          sources:
          - serviceAccountToken:
              audience: kgateway
              expirationSeconds: 43200
              path: xds-token
      - configMap:
          name: gw
        name: envoy-config
status: {}
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    pdb-source: gatewayclass
  name: gw
spec:
  minAvailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gw
      app.kubernetes.io/name: gw
      gateway.networking.k8s.io/gateway-name: gw
status:
  currentHealthy: 0
  desiredHealthy: 0
  disruptionsAllowed: 0
  expectedPods: 0
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  labels:
    hpa-source: gateway
  name: gw
spec:
  maxReplicas: 5
  metrics:
  - resource:
      name: cpu
      target:
        averageUtilization: 70
        type: Utilization
    type: Resource
  minReplicas: 2
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: gw
status:
  currentMetrics: null
  desiredReplicas: 0
